--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,15 @@
 cmake_minimum_required(VERSION 3.24)
 project(utility VERSION 1.0 LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
+set(default_build_type "Release")
+
+
+if(NOT CMAKE_BUILD_TYPE)
+    message(STATUS "Setting build type to '${default_build_type}' as none was specified.")
+    set(CMAKE_BUILD_TYPE "${default_build_type}" CACHE STRING "Choose the type of build." FORCE)
+    set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS
+    "Debug" "Release" )
+endif()
 
 # *************************************************************************
 # The basic library we are making
